force-app/main/default/objects/Case/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <label>Attachments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>