force-app/main/default/objects/Case/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Intercompany Change</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>HBS</fullName>
            </value>
            <value>
                <fullName>Combi-Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>