force-app/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GEHC-IT</fullName>
            </value>
            <value>
                <fullName>GEHC-LS</fullName>
            </value>
            <value>
                <fullName>HCS</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>GS USCAN</fullName>
            </value>
            <value>
                <fullName>Bimoed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>