force-app/main/default/objects/Case/fields/Case_Action_Taken_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Action_Taken_Notes__c</fullName>
    <label>Case Action Taken Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>