force-app/main/default/objects/Case/fields/Case_Billing__c.field-meta.xml
<CustomField>
    <fullName>Case_Billing__c</fullName>
    <label>Case Billing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>