force-app/main/default/objects/Case/fields/Case_Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancelation_Reason__c</fullName>
    <label>Case Cancelation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed by Customer</fullName>
            </value>
            <value>
                <fullName>Quotation not accepted</fullName>
            </value>
            <value>
                <fullName>Opened by Mistake</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Clinical Education</fullName>
            </value>
            <value>
                <fullName>Credit is on Hold</fullName>
            </value>
            <value>
                <fullName>PM every Two Years</fullName>
            </value>
            <value>
                <fullName>On manager Demand</fullName>
            </value>
            <value>
                <fullName>No PM Required</fullName>
            </value>
            <value>
                <fullName>Removed from Contract</fullName>
            </value>
            <value>
                <fullName>Customer Unresponsive</fullName>
            </value>
            <value>
                <fullName>Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Device not found on Site</fullName>
            </value>
            <value>
                <fullName>Device Discommissioned</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>