force-app/main/default/objects/Case/fields/Case_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancelled_Date__c</fullName>
    <label>Case Cancelled Date</label>
    <type>DateTime</type>
</CustomField>