force-app/main/default/objects/Case/fields/Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Date__c</fullName>
    <label>Case Closed Date</label>
    <type>DateTime</type>
</CustomField>