force-app/main/default/objects/Case/fields/Case_Currency__c.field-meta.xml
<CustomField>
    <fullName>Case_Currency__c</fullName>
    <label>Case Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>