force-app/main/default/objects/Case/fields/Case_Discount__c.field-meta.xml
<CustomField>
    <fullName>Case_Discount__c</fullName>
    <label>Case Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>