force-app/main/default/objects/Case/fields/Case_Entitled_Price__c.field-meta.xml
<CustomField>
    <fullName>Case_Entitled_Price__c</fullName>
    <label>Case Entitled Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>