force-app/main/default/objects/Case/fields/Case_FE_Discount__c.field-meta.xml
<CustomField>
    <fullName>Case_FE_Discount__c</fullName>
    <label>Case FE Discount%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>