force-app/main/default/objects/Case/fields/Case_FE_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Case_FE_Discount_Amount__c</fullName>
    <label>Case FE Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>