force-app/main/default/objects/Case/fields/Case_Language__c.field-meta.xml
<CustomField>
    <fullName>Case_Language__c</fullName>
    <label>Case Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>TEL</fullName>
            </value>
            <value>
                <fullName>HIN</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>JA</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>