force-app/main/default/objects/Case/fields/Case_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Case_List_Price__c</fullName>
    <description>This field stores the rollup sum of all workorder list price in it</description>
    <label>Case List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>