force-app/main/default/objects/Case/fields/Case_Numer__c.field-meta.xml
<CustomField>
    <fullName>Case_Numer__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Case Numer</label>
    <type>AutoNumber</type>
</CustomField>