force-app/main/default/objects/Case/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>CS Admin</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>ePlanner</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Trap</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>