force-app/main/default/objects/Case/fields/Case_Price__c.field-meta.xml
<CustomField>
    <fullName>Case_Price__c</fullName>
    <description>The Field stores the roll up sum data of all the Workorder price in it.</description>
    <label>Case Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>