force-app/main/default/objects/Case/fields/Case_Price_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Case_Price_With_Tax__c</fullName>
    <label>Case Price With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>