force-app/main/default/objects/Case/fields/Current_Equipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Equipment_Status__c</fullName>
    <label>Current Equipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Running</fullName>
            </value>
            <value>
                <fullName>System Down</fullName>
            </value>
            <value>
                <fullName>System Partially Running</fullName>
            </value>
            <value>
                <fullName>System Up</fullName>
            </value>
            <value>
                <fullName>System in Limited Use</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>