force-app/main/default/objects/Case/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Negotiations Pending</fullName>
            </value>
            <value>
                <fullName>Parts Availability</fullName>
            </value>
            <value>
                <fullName>Product Issues</fullName>
            </value>
            <value>
                <fullName>Already Billed</fullName>
            </value>
            <value>
                <fullName>Commercial Concession</fullName>
            </value>
            <value>
                <fullName>Service Concession approved by DOS</fullName>
            </value>
            <value>
                <fullName>GE Convenience</fullName>
            </value>
            <value>
                <fullName>Service Courtesy</fullName>
            </value>
            <value>
                <fullName>Overtime Discount</fullName>
            </value>
            <value>
                <fullName>Cross Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Covered by Contract</fullName>
            </value>
            <value>
                <fullName>Covered by Flat Fee</fullName>
            </value>
            <value>
                <fullName>Travel Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>