force-app/main/default/objects/Case/fields/Entiltled_Date__c.field-meta.xml
<CustomField>
    <fullName>Entiltled_Date__c</fullName>
    <label>Entiltled Date</label>
    <type>DateTime</type>
</CustomField>