force-app/main/default/objects/Case/fields/Entitlement_Coverage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Coverage_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitlement Coverage Flag</label>
    <type>Checkbox</type>
</CustomField>