force-app/main/default/objects/Case/fields/Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flat Fee</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Flat Fee)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>