force-app/main/default/objects/Case/fields/integration__c.field-meta.xml
<CustomField>
    <fullName>integration__c</fullName>
    <label>integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Integration related</fullName>
            </value>
            <value>
                <fullName>Backend RIS</fullName>
            </value>
            <value>
                <fullName>FrontEnd</fullName>
            </value>
            <value>
                <fullName>Modalities</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>