force-app/main/default/objects/Case/recordTypes/Administration.recordType-meta.xml
<RecordType>
    <fullName>Administration</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Administration</label>
</RecordType>