force-app/main/default/objects/Case/recordTypes/Administration_Create.recordType-meta.xml
<RecordType>
    <fullName>Administration_Create</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Administration Create</label>
</RecordType>