force-app/main/default/objects/Case/recordTypes/Closed_Cancelled.recordType-meta.xml
<RecordType>
    <fullName>Closed_Cancelled</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Closed/Cancelled</label>
</RecordType>