force-app/main/default/objects/Case/recordTypes/Corrective_Repair.recordType-meta.xml
<RecordType>
    <fullName>Corrective_Repair</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>correct the repaired parts in IP</description>
    <label>Corrective Repair</label>
</RecordType>