force-app/main/default/objects/Case/recordTypes/Corrective_Repair_Create.recordType-meta.xml
<RecordType>
    <fullName>Corrective_Repair_Create</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>This used by GS Business to create Corrective Repair Cases. Before save we are changing the recordtype to &apos;Corrective Repair&apos;</description>
    <label>Corrective Repair Create</label>
</RecordType>