force-app/main/default/objects/Case/recordTypes/FMI.recordType-meta.xml
<RecordType>
    <fullName>FMI</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>FMI</label>
</RecordType>