force-app/main/default/objects/Case/recordTypes/FMI_Create.recordType-meta.xml
<RecordType>
    <fullName>FMI_Create</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>This used by GS Business to create FMI Cases. Before save we are changing the recordtype to &apos;FMI&apos;</description>
    <label>FMI Create</label>
</RecordType>