force-app/main/default/objects/Case/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Installation</label>
</RecordType>