force-app/main/default/objects/Case/recordTypes/Installation_Create.recordType-meta.xml
<RecordType>
    <fullName>Installation_Create</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>This used by GS Business to create Installation Cases. Before save we are changing the recordtype to &apos;Installation&apos;</description>
    <label>Installation Create</label>
</RecordType>