force-app/main/default/objects/Case/recordTypes/Parts_Sale.recordType-meta.xml
<RecordType>
    <fullName>Parts_Sale</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Parts Sale</label>
</RecordType>