force-app/main/default/objects/Case/recordTypes/Parts_Sale_Create.recordType-meta.xml
<RecordType>
    <fullName>Parts_Sale_Create</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Parts Sale Create</label>
</RecordType>