force-app/main/default/objects/Case/recordTypes/Planned_Maintainance.recordType-meta.xml
<RecordType>
    <fullName>Planned_Maintainance</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Regular Maintainance of IP</description>
    <label>Planned Maintainance</label>
</RecordType>