force-app/main/default/objects/Case/recordTypes/Planned_Maintainance_Create.recordType-meta.xml
<RecordType>
    <fullName>Planned_Maintainance_Create</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Planned Maintainance Create</label>
</RecordType>