force-app/main/default/objects/Case/recordTypes/Product_Support.recordType-meta.xml
<RecordType>
    <fullName>Product_Support</fullName>
    <active>true</active>
    <businessProcess>Product Support</businessProcess>
    <description>Use to log customer support issues.</description>
    <label>Product Support</label>
</RecordType>