force-app/main/default/objects/Case/recordTypes/Sales_Support_Create.recordType-meta.xml
<RecordType>
    <fullName>Sales_Support_Create</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Sales Support Create</label>
</RecordType>