force-app/main/default/objects/Case/recordTypes/Status.recordType-meta.xml
<RecordType>
    <fullName>Status</fullName>
    <active>true</active>
    <businessProcess>Product Support</businessProcess>
    <label>Status</label>
</RecordType>