force-app/main/default/objects/Case/validationRules/CASE002_Cannot_Reopen_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>CASE002_Cannot_Reopen_Case</fullName>
    <active>true</active>
    <description>case validation</description>
    <errorConditionFormula>NOT($Permission.Bypass_Case_Validation_Rules ) &amp;&amp; ISPICKVAL(PRIORVALUE( Status ),&apos;Closed&apos;) &amp;&amp;  ISCHANGED( Status )</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Cases that are closed cannot be reopened [CASE002]</errorMessage>
</ValidationRule>